--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,10 @@
 {
-  "builds": [
-    { "src": "pages/**/*.js", "use": "@vercel/node" },
-    { "src": "pages/**/*.html", "use": "@vercel/static" }
-  ]
+    "builds": [
+        { "src": "pages/**/*.js", "use": "@vercel/node" },
+        { "src": "pages/**/*.html", "use": "@vercel/static" },
+        { "src": "public/**/*", "use": "@vercel/static" }
+    ],
+    "routes": [
+        { "src": "/", "dest": "/pages/index.html" }
+    ]
 }
