--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,23 @@
 {
-    "builds": [
-        { "src": "pages/**/*.js", "use": "@vercel/node" },
-        { "src": "pages/**/*.html", "use": "@vercel/static" },
-        { "src": "public/**/*", "use": "@vercel/static" }
-    ],
-    "routes": [
-        { "src": "/", "dest": "/pages/index.html" }
-    ]
+  "version": 2,
+  "builds": [
+    {
+      "src": "pages/api/*.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "dest": "/pages/api/$1.js"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/public/$1"
+    }
+  ]
 }
