--- a/vercel.json
+++ b/vercel.json
@@ -1,23 +1,12 @@
 {
   "version": 2,
   "builds": [
-    {
-      "src": "pages/api/*.js",
-      "use": "@vercel/node"
-    },
-    {
-      "src": "public/**/*",
-      "use": "@vercel/static"
-    }
+    { "src": "pages/api/*.js", "use": "@vercel/node" },
+    { "src": "public/**/*", "use": "@vercel/static" }
   ],
   "routes": [
-    {
-      "src": "/api/(.*)",
-      "dest": "/pages/api/$1.js"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/public/$1"
-    }
+    { "src": "/api/(.*)", "dest": "/pages/api/$1.js" },
+    { "src": "/(.*)", "dest": "/public/$1" }
   ]
 }
+
